General doc and usability improvements for API consumers
